--- a/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_FooterPartial.cshtml
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_FooterPartial.cshtml
@@ -14,26 +14,36 @@
 <div class="side_nav">
     <ul>
         <li>
-            <a href="about.html" title="关于博主">
+            <a href="/about" title="关于博主">
                 <i class="icon_ab">
                     <img src="~/images/ft_about.png" alt="">
                 </i>
             </a>
         </li>
         <li>
-            <a href="gbook.html" title="在线留言">
+            <a title="在线留言">
                 <i class="icon_qq">
-                    <img src="~/images/ft_qq.png" alt="">
+                    <img src="~/images/wechatpublic1.jpg" alt="快乐玩转技术微信公众号">
                 </i>
             </a>
         </li>
         <li>
             <a title="个人微信">
                 <i class="icon_wx">
-                    <img src="images/ft_ewm.png" alt="">
+                    <img src="~/images/ft_ewm.png" alt="">
                 </i>
                 <span>
-                    <img src="~/images/wx.png" alt="微信">
+                    <img src="~/images/wechatowner.jpg" alt="微信">
+                </span>
+            </a>
+        </li>
+        <li>
+            <a title="微信公众号">
+                <i class="icon_wx">
+                    <img src="~/images/ft_ewm.png" alt="">
+                </i>
+                <span>
+                    <img src="~/images/wechatpublic.jpg" alt="Dotnet9微信公众号">
                 </span>
             </a>
         </li>
