--- a/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_FooterPartial.cshtml
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_FooterPartial.cshtml
@@ -22,9 +22,12 @@
         </li>
         <li>
             <a title="在线留言">
-                <i class="icon_qq">
-                    <img src="~/images/wechatpublic1.jpg" alt="快乐玩转技术微信公众号">
+                <i class="icon_wx">
+                    <img src="~/images/ft_ewm.png" alt="">
                 </i>
+                <span>
+                    <img src="~/images/wechatpublic1.jpg" alt="快乐玩转技术微信公众号">
+                </span>
             </a>
         </li>
         <li>
