--- a/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Blogs/Details.cshtml
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Blogs/Details.cshtml
@@ -8,11 +8,7 @@
     ViewData[ViewDataKeys.Description] = Model.Blog?.Description;
 }
 
-@section Headers
-{
-    <link rel="stylesheet" href="https://cdn.staticfile.org/highlight.js/11.7.0/styles/monokai-sublime.min.css"/>
-    <link rel="stylesheet" href="~/css/detail.css"/>
-}
+@await Html.PartialAsync("_MarkdownHeader")
 
 <h1 class="detail-title">@Model.Blog?.Title</h1>
 
@@ -115,8 +111,4 @@
     </div>
 </div>
 
-@section Scripts
-{
-    <script src="https://cdn.staticfile.org/highlight.js/11.7.0/highlight.min.js"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
-}
+@await Html.PartialAsync("_MarkdownFooter")
