--- a/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_FooterPartial.cshtml
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_FooterPartial.cshtml
@@ -6,7 +6,11 @@
 <footer>
     <div class="box">
         <div class="copyright">
-            <p>Copyright © @siteInfo?.AppName &nbsp; <a href="/donation" target="_blank" title="这是爱的力量">打赏</a></p>
+            <p>
+                Copyright © @siteInfo?.AppName &nbsp;
+                <a class="important-word" href="/donation" title="这是爱的力量">打赏</a>
+                <a href="/about">关于</a>
+            </p>
             <p>备案号 <a href="@siteInfo?.BeiAnUrl" target="_blank">@siteInfo?.BeiAn</a> ｜<a href="/" target="_blank">网站地图</a></p>
         </div>
     </div>
