--- a/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_FooterPartial.cshtml
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_FooterPartial.cshtml
@@ -15,11 +15,13 @@
             <p>
                 备案号 <a href="@siteInfo?.BeiAnUrl" target="_blank" rel="nofollow noopener">@siteInfo?.BeiAn</a>
                 ｜<a href="/sitemap.xml" target="_blank">网站地图</a>
+                ｜<a href="/rss" target="_blank">Rss</a>
             </p>
 
             <p>
                 &nbsp; 由 .NET 8.0 强力驱动
-                &nbsp; | <a href="@siteInfo?.Github" target="_blank">Github</a>
+                &nbsp; | <a href="@siteInfo?.Github" target="_blank">网站源码</a>
+                &nbsp; | <a href="@siteInfo?.Github/issues" target="_blank">Bug反馈</a>
                 &nbsp; | 前台&nbsp;<a href="https://learn.microsoft.com/zh-cn/aspnet/core/razor-pages/?view=aspnetcore-8.0&tabs=visual-studio" target="_blank">Razor Pages</a>
                 &nbsp; | 后端&nbsp;<a href="https://learn.microsoft.com/zh-cn/aspnet/core/web-api/?view=aspnetcore-8.0" target="_blank">.NET Web API</a>
             </p>
