--- a/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_FooterPartial.cshtml
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_FooterPartial.cshtml
@@ -7,7 +7,8 @@
     <div class="box">
         <div class="copyright">
             <p>
-                &nbsp; 2019~@DateTimeOffset.Now.Year &nbsp;&nbsp; © <a href="@siteInfo?.Domain">@siteInfo?.AppName</a> &nbsp;& @siteInfo?.Owner 版权所有
+                &nbsp; 2019~@DateTimeOffset.Now.Year &nbsp;&nbsp; © <a href="@siteInfo?.Domain">@siteInfo?.AppName</a> &nbsp;& @siteInfo?.Owner 保留所有权利
+                &nbsp;|&nbsp; Powered & Developed by @siteInfo?.Owner
                 &nbsp;|&nbsp; <a class="important-word" href="/donation" title="这是爱的力量">打赏</a>
                 &nbsp;|&nbsp; <a href="/about">关于</a>
             </p>
@@ -19,11 +20,12 @@
             </p>
 
             <p>
-                &nbsp; 由 .NET 8.0 强力驱动
-                &nbsp; | <a href="@siteInfo?.Github" target="_blank">网站源码</a>
+                &nbsp; 本站由 .NET 8.0 强力驱动！
+                &nbsp; | 本站源代码：<a href="@siteInfo?.Github" target="_blank">Github</a>
                 &nbsp; | <a href="@siteInfo?.Github/issues" target="_blank">Bug反馈</a>
                 &nbsp; | 前台&nbsp;<a href="https://learn.microsoft.com/zh-cn/aspnet/core/razor-pages/?view=aspnetcore-8.0&tabs=visual-studio" target="_blank">Razor Pages</a>
                 &nbsp; | 后端&nbsp;<a href="https://learn.microsoft.com/zh-cn/aspnet/core/web-api/?view=aspnetcore-8.0" target="_blank">.NET Web API</a>
+                &nbsp; | <a href="/privacy" target="_blank">隐私政策</a>
             </p>
         </div>
     </div>
