--- a/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/_ViewImports.cshtml
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/_ViewImports.cshtml
@@ -6,3 +6,5 @@
 @using Dotnet9.Contracts.Dto.Albums
 @using Dotnet9.Contracts.Dto.Categories
 @using Dotnet9.Contracts.Dto.Blogs
+@using Dotnet9.Contracts.Dto.FriendlyLinks
+@using Masa.Utils.Models
