add tag list and album list;

--- a/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_HeaderPartial.cshtml
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_HeaderPartial.cshtml
@@ -6,6 +6,12 @@
     <div class="topbar">
         <a href="/" class="logo">@siteInfo?.AppName</a>
         <span class="header-menu">
+            <a href="/albums" title="专辑">专辑</a>
+        </span>
+        <span class="header-menu">
+            <a href="/tags" title="标签云">标签云</a>
+        </span>
+        <span class="header-menu">
             <a href="/donation" title="这是爱的力量">
                 <div class="badge">打赏<span class="count">爱心</span></div>
             </a>
