--- a/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/_ViewImports.cshtml
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/_ViewImports.cshtml
@@ -8,3 +8,5 @@
 @using Dotnet9.Contracts.Dto.Blogs
 @using Dotnet9.Contracts.Dto.FriendlyLinks
 @using Masa.Utils.Models
+@using Dotnet9.Contracts.Tags
+@using System.Net
