--- a/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Albums/Index.cshtml
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Albums/Index.cshtml
@@ -1,14 +1,40 @@
-﻿@page "/albums/{Slug}"
+﻿@page "/albums"
 
-@model Dotnet9.RazorPages.Pages.Albums.IndexModel
+@inject ICaller Caller
 @{
-    ViewData[ViewDataKeys.Title] = $"专辑-{Model.RequestResponse?.AlbumName}";
-    ViewData[ViewDataKeys.Keywords] = Model.Slug;
-    ViewData[ViewDataKeys.Description] = Model.RequestResponse?.AlbumName;
+    var title = "专辑";
+    var description = "专辑是将一系列相关主题的文章进行分类整理，形成一个专辑。";
+    var albumList = await Caller.GetAsync<List<AlbumBrief>>("/api/albums/brief");
+    ViewData[ViewDataKeys.Title] = title;
+    ViewData[ViewDataKeys.Keywords] = description;
+    ViewData[ViewDataKeys.Description] = description;
 }
 
-<h1 class="detail-title">专辑-@Model.RequestResponse?.AlbumName</h1>
+<h1 class="detail-title">@title</h1>
+
+<p>@description</p>
 
 <div id="view-content" class="gap-solid"></div>
 
-@await Html.PartialAsync("_PaginationPartial", new PaginationModel(Model.Blogs, $"/albums/{Model.Slug}", Model.Current, Model.Pages, Model.RequestResponse.Total, Model.PageSize, Model.RequestResponse.TotalPage))
+@if (albumList?.Any() != true)
+{
+    <div class="read_more">
+        这里空空如也
+    </div>
+}
+else
+{
+    <div class="blog_list">
+        <ul>
+            @foreach (var album in albumList)
+            {
+                <li>
+                    <a href="albums/@album.Slug" class="blog_more">
+                        <h2>@album.Name (共 @album.BlogCount 篇)</h2>
+                        <p>@album.Description</p>
+                    </a>
+                </li>
+            }
+        </ul>
+    </div>
+}
