--- a/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Tags/Index.cshtml
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Tags/Index.cshtml
@@ -1,16 +1,34 @@
-﻿@page "/tags/{Name}"
+﻿@page "/tags"
 
-@using System.Net
-@model Dotnet9.RazorPages.Pages.Tags.IndexModel
+@inject ICaller Caller
 @{
-    var decodeName = WebUtility.UrlDecode(Model.Name);
-    ViewData[ViewDataKeys.Title] = $"标签-{decodeName}";
-    ViewData[ViewDataKeys.Keywords] = decodeName;
-    ViewData[ViewDataKeys.Description] = decodeName;
+    var title = "标签云";
+    var description = "博客网站的标签云是一种展示博客文章标签的可视化工具，通常以云状图形的形式呈现。标签云中，标签的大小和字体的粗细通常表示该标签在博客中出现的频率或重要性。用户可以通过点击标签云中的标签，快速地找到相关主题的文章。标签云也可以帮助博客作者更好地组织和分类自己的文章，方便读者浏览和搜索。";
+    var tags = await Caller.GetAsync<List<TagBrief>>(
+        $"/api/tags");
+    ViewData[ViewDataKeys.Title] = title;
+    ViewData[ViewDataKeys.Keywords] = title;
+    ViewData[ViewDataKeys.Description] = description;
 }
 
-<h1 class="detail-title">标签-@decodeName</h1>
+<h1 class="detail-title">@title</h1>
+
+<p>@description</p>
 
 <div id="view-content" class="gap-solid"></div>
 
-@await Html.PartialAsync("_PaginationPartial", new PaginationModel(Model.Blogs, $"/tags/{Model.Name}", Model.Current, Model.Pages, Model.RequestResponse.Total, Model.PageSize, Model.RequestResponse.TotalPage))
+@if (tags?.Any() != true)
+{
+    <div class="read_more">
+        这里空空如也
+    </div>
+}
+else
+{
+    <ul class="cloud" role="navigation" aria-label="Webdev tag cloud">
+        @foreach (var tag in tags)
+        {
+            <li><a href="/tags/@(WebUtility.UrlEncode(tag.Name))" data-weight="@tag.BlogCount">@tag.Name (@tag.BlogCount)</a></li>
+        }
+    </ul>
+}
