--- a/src/Dotnet9.Web/Dotnet9.RazorPages/wwwroot/css/base.css
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/wwwroot/css/base.css
@@ -339,6 +339,9 @@ ul.cloud a {
     ul.cloud li:nth-child(4n+1) a {
         --color: #c38;
     }
+    ul.cloud a {
+        color: var(--color)
+    }
     ul.cloud a:focus {
         outline: 1px dashed;
     }
