--- a/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_FooterPartial.cshtml
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_FooterPartial.cshtml
@@ -29,6 +29,7 @@
 
             <p>
                 备案号 <a href="@siteInfo?.BeiAnUrl" target="_blank" rel="nofollow noopener">@siteInfo?.BeiAn</a>
+                ｜<a href="/timelines" target="_blank">时间轴</a>
                 ｜<a href="/sitemap.xml" target="_blank">网站地图</a>
                 ｜<a href="/rss" target="_blank">Rss</a>
             </p>
