--- a/src/Dotnet9.Web/Dotnet9.RazorPages/wwwroot/css/base.css
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/wwwroot/css/base.css
@@ -13,7 +13,7 @@ a:hover { color: #333; text-decoration: none; }
 .blank { clear: both; width: 100%; overflow: hidden; height: 20px }
 article { width: 1280px; margin: 120px auto 0; overflow: hidden }
 .box { width: 1280px; margin: auto; overflow: hidden }
-.is-fixed { position: fixed; top: 120px; z-index: 99; }
+.is-fixed { top: 120px; z-index: 99; }
 /*header*/
 header { height: 85px; margin-bottom: 20px; border-bottom: 1px solid #e8e8e8; position: fixed; width: 100%; top: 0; background: #fff; z-index: 9999; }
 .topbar { width: 1280px; margin: auto; padding: 20px 0; overflow: hidden; }
