--- a/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_HeaderPartial.cshtml
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_HeaderPartial.cshtml
@@ -12,6 +12,9 @@
             <a href="/tags" title="标签云">标签云</a>
         </span>
         <span class="header-menu">
+            <a href="/ide" title="在线IDE">在线IDE</a>
+        </span>
+        <span class="header-menu">
             <a href="/donation" title="这是爱的力量">
                 <div class="badge">打赏<span class="count">爱心</span></div>
             </a>
