--- a/src/Dotnet9.Web/Dotnet9.RazorPages/wwwroot/css/detail.css
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/wwwroot/css/detail.css
@@ -1,7 +1,7 @@
 .detail-title {
     font-size: 26px;
     line-height: 38px;
-    padding: 0 30px;
+    margin: 5px 10px 30px 5px;
 }
 
 .detail-action {
