--- a/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/WebIDE.cshtml
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/WebIDE.cshtml
@@ -2,8 +2,30 @@
 
 @inject ISystemService SystemService
 @{
-    Layout = null;
+    var siteInfo = await SystemService.GetSiteInfoAsync();
+    Layout = "Shared/_CustomLayout";
     ViewData[ViewDataKeys.Title] = "在线IDE";
 }
 
-<iframe style="width: 100%;height: 100%" src="https://webassembly.tokengo.top:8843/"></iframe>
+@section Headers
+{
+    <style>
+        * {
+            margin: 0;
+            padding: 0
+        }
+
+        body {
+            overflow: hidden;
+        }
+
+        iframe{
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            }
+
+    </style>
+}
+
+<iframe src="https://webassembly.tokengo.top:8843?home=@siteInfo?.Domain"></iframe>
