update friendly link open with blank;

--- a/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_FooterPartial.cshtml
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_FooterPartial.cshtml
@@ -14,7 +14,7 @@
                 {
                     @foreach (var link in friendlyLinks.Result)
                     {
-                        <a href="@link.Url" title="@link.Description">@link.Name</a>
+                        <a href="@link.Url" title="@link.Description" target="_blank">@link.Name</a>
                         <span>&nbsp;|&nbsp;</span>
                     }
                 }
