add token ai page;

--- a/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_HeaderPartial.cshtml
+++ b/src/Dotnet9.Web/Dotnet9.RazorPages/Pages/Shared/_HeaderPartial.cshtml
@@ -12,10 +12,10 @@
             <a href="/tags" title="标签云">标签云</a>
         </span>
         <span class="header-menu">
-            <a href="https://open666.cn/" target="_blank" title="免费AI">Token AI</a>
+            <a href="/ai" title="免费AI">Token AI</a>
         </span>
         <span class="header-menu">
-            <a href="/ide" target="_blank" title="在线IDE">在线IDE</a>
+            <a href="/ide" title="在线IDE">在线IDE</a>
         </span>
         <span class="header-menu">
             <a href="/donation" title="这是爱的力量">
